--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,5 @@ spring.jpa.openInView=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create-drop
+
+server.error.whitelabel.enabled=false
